Fixing a tag overflows and restyling.

--- a/style.css
+++ b/style.css
@@ -25,18 +25,21 @@ header {
 }
 
 .mainOutputContainer a {
+    width: fit-content;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    margin: auto;
     clear: right;
     text-decoration: none;
+
 }
 
 .mainOutputContainer a img {
     width: auto;
     max-width: 100%;
     height: auto;
+    max-height: 700px;
 }
 
 #searchOutputContainer > h3 {
@@ -59,8 +62,7 @@ header {
 
 .alternateOutputContainer section a {
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    width: fit-content;
     text-decoration: none;
 }
 
@@ -69,11 +71,14 @@ header {
 }
 
 .alternateOutputContainer section a img {
-    height: 20%;
-    width: 20%;
-    max-height: 250px;
-    max-width: 200px;
+    height: auto;
+    width: auto;
+    max-width: 125px;
     margin-right: 5%;
+}
+
+.alternateOutputContainer section a h3 {
+    margin: auto 0 auto 0;
 }
 
 .alternatingRow {
@@ -94,10 +99,10 @@ header {
     }
 
     .alternateOutputContainer {
+        flex: 0 0 20%;
         flex-direction: row;
-        justify-content: space-evenly;
-        column-gap: 2%;
-       
+        justify-content: space-evenly;    
+        column-gap: 2%;   
     }
 
     .alternateOutputContainer section {
@@ -107,14 +112,14 @@ header {
 
     .alternateOutputContainer section a {
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+         margin: auto;
     }
 
     .alternateOutputContainer section a img {
         width: auto;
         height: auto;
         max-width: 100%;
+        margin: auto;
     }
 
     .alternateOutputContainer section a h3 {
